--- a/index.html
+++ b/index.html
@@ -19,10 +19,20 @@
     </header>
     <p>Here are some tools to help you with CharaChorder:</p>
     <ul>
-        <li><a href="count.html">Count Bigrams</a> - This tool helps you find two letter chords that are
-            infrequently occuring in words so that you don't accidentally trigger chords.</li>
-        <li><a href="convert.html">Convert Chord Map</a> - This tool helps you convert your chord map between QWERTY,
-            Dvorak, and Colemak since the CharaChorder chords are based on position and not letter.</li>
+        <li>
+            <a href="count.html">Count Bigrams</a>
+            <ul>
+                <li>This tool helps you find two letter chords that are infrequently occuring in words so that you don't
+                    accidentally trigger chords.</li>
+            </ul>
+        </li>
+        <li>
+            <a href="convert.html">Convert Chord Map</a>
+            <ul>
+                <li>This tool helps you convert your chord map between QWERTY, Dvorak, and Colemak since the
+                    CharaChorder chords are based on position and not letter.</li>
+            </ul>
+        </li>
     </ul>
 </body>
 
