Adding chord stats page

--- a/convert.html
+++ b/convert.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="count.html">Count Bigrams</a></li>
         <li><a href="convert.html">Convert Chord Map</a></li>
+        <li><a href="stats.html">Chord Stats</a></li>
       </ul>
     </nav>
   </header>
