--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="count.html">Count Bigrams</a></li>
                 <li><a href="convert.html">Convert Chord Map</a></li>
+                <li><a href="stats.html">Chord Stats</a></li>
             </ul>
         </nav>
     </header>
-    <p>Here are some tools to help you with CharaChorder:</p>
     <ul>
         <li>
             <a href="count.html">Count Bigrams</a>
@@ -31,6 +31,12 @@
             <ul>
                 <li>This tool helps you convert your chord map between QWERTY, Dvorak, and Colemak since the
                     CharaChorder chords are based on position and not letter.</li>
+            </ul>
+        </li>
+        <li>
+            <a href="stats.html">Chord Statistics</a>
+            <ul>
+                <li>This tool looks at your uploaded chord map and provides some statistics (number of chords, breakdown by number of letters 2 letter/3 letter ... etc.)</li>
             </ul>
         </li>
     </ul>
