--- a/count.html
+++ b/count.html
@@ -16,6 +16,7 @@
                 <li><a href="count.html">Count Bigrams</a></li>
                 <li><a href="convert.html">Convert Chord Map</a></li>
                 <li><a href="stats.html">Chord Stats</a></li>
+                <li><a href="missing.html">Missing Chords</a></li>
             </ul>
         </nav>
     </header>
