Updated file name and added ChordFinder to index

--- a/convert.html
+++ b/convert.html
@@ -15,7 +15,7 @@
         <li><a href="count.html">Count Bigrams</a></li>
         <li><a href="convert.html">Convert Chord Map</a></li>
         <li><a href="stats.html">Chord Stats</a></li>
-        <li><a href="missing.html">Missing Chords</a></li>
+        <li><a href="chordfinder.html">ChordFinder</a></li>
       </ul>
     </nav>
   </header>
