--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="count.html">Count Bigrams</a></li>
                 <li><a href="convert.html">Convert Chord Map</a></li>
                 <li><a href="stats.html">Chord Stats</a></li>
-                <li><a href="missing.html">Missing Chords</a></li>
+                <li><a href="chordfinder.html">ChordFinder</a></li>
             </ul>
         </nav>
     </header>
@@ -38,6 +38,12 @@
             <a href="stats.html">Chord Statistics</a>
             <ul>
                 <li>This tool looks at your uploaded chord map and provides some statistics (number of chords, breakdown by number of letters 2 letter/3 letter ... etc.)</li>
+            </ul>
+        </li>
+        <li>
+            <a href="missing.html">ChordFinder</a>
+            <ul>
+                <li>This tool looks at your uploaded chord map and a text and finds common words and phrases in the text that you don't have chords for.</li>
             </ul>
         </li>
     </ul>
