--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </li>
         <li>
-            <a href="missing.html">ChordFinder</a>
+            <a href="chordfinder.html">ChordFinder</a>
             <ul>
                 <li>This tool looks at your uploaded chord map and a text and finds common words and phrases in the text that you don't have chords for.</li>
             </ul>
