--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 
 <head>
-    <title>CharaChorder Utilities</title>
+    <head>
+        <title>CharaChorder Utilities - Home</title>
+        <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users, including a bigram count tool, a chord map converter, chord statistics, and a chordfinder.">
+        <meta property="og:title" content="CharaChorder Utilities - Home">
+        <meta property="og:description" content="CharaChorder Utilities is a set of tools for CharaChorder users, including a bigram count tool, a chord map converter, chord statistics, and a chordfinder.">
+      </head>
+      
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
