--- a/chordfinder.html
+++ b/chordfinder.html
@@ -5,6 +5,7 @@
     <title>Missing Chords</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://unpkg.com/compromise"></script>
 </head>
 
 <body>
@@ -26,15 +27,22 @@
     </p>
     <form>
         <label>
-            Chord CSV file
-            <input type="file" id="input-file" accept=".csv" />
-          </label>
-          <br />
+          Chord CSV file
+          <input type="file" id="input-file" accept=".csv" />
+        </label>
+        <br />
         <label for="textarea">Text to analyze:</label><br>
         <textarea id="textarea" rows="10" cols="40"></textarea><br>
-        <label for="minReps">Enter a mininum frequency to filter the table by:</label><input id="minReps" type="number" value="5">
+        <label for="minReps">Enter a mininum frequency to filter the table by:</label>
+        <input id="minReps" type="number" value="5">
+        <br />
+        <label>
+          Attempt lemmatization of words?
+          <input type="checkbox" id="lemmatization" />
+        </label>
+        <br />
         <button type="button" onclick="findMissingChords()">Find Chords</button>
-    </form>
+      </form>      
     <div id="results"></div>
     <div id="phrases"></div>
     <script type='text/javascript' src='missing.js'></script>
