Add note on perf

--- a/chordfinder.html
+++ b/chordfinder.html
@@ -23,7 +23,8 @@
     </header>
     <h1>Missing Chords</h1>
     <p>This utility helps you identify new chords. It analyzes text you paste in (some text from you, such as emails export or chat export or other writing)
-        and then shows you words in the text you haven't created chords for (based on the csv you give it). Note: your chord map never leaves your browser.
+        and then shows you words in the text you haven't created chords for (based on the csv you give it). Note: your chord map never leaves your browser.  Also, because
+        processing is all done in your client performance could be heavily influenced by your computer. Long text may take a while to lemmatize.
     </p>
     <form>
         <label>
