--- a/chordfinder.html
+++ b/chordfinder.html
@@ -17,11 +17,11 @@
                 <li><a href="count.html">Count Bigrams</a></li>
                 <li><a href="convert.html">Convert Chord Map</a></li>
                 <li><a href="stats.html">Chord Stats</a></li>
-                <li><a href="missing.html">Missing Chords</a></li>
+                <li><a href="chordfinder.html">ChordFinder</a></li>
             </ul>
         </nav>
     </header>
-    <h1>Missing Chords</h1>
+    <h1>ChordFinder</h1>
     <p>This utility helps you identify new chords. It analyzes text you paste in (some text from you, such as emails
         export or chat export or other writing)
         and then shows you words in the text you haven't created chords for (based on the csv you give it). Note: your
