Adding in anagrams and some docs, reorg files

--- a/chordfinder.html
+++ b/chordfinder.html
@@ -18,6 +18,7 @@
                 <li><a href="convert.html">Convert Chord Map</a></li>
                 <li><a href="stats.html">Chord Stats</a></li>
                 <li><a href="chordfinder.html">ChordFinder</a></li>
+                <li><a href="partialanagrams.html">Anagrams</a></li>
             </ul>
         </nav>
     </header>
@@ -49,6 +50,6 @@
     </form>
     <div id="results"></div>
     <div id="phrases"></div>
-    <script type='text/javascript' src='missing.js'></script>
-    <script type='text/javascript' src='downloadTable.js'></script>
+    <script type='text/javascript' src='js/missing.js'></script>
+    <script type='text/javascript' src='js/downloadTable.js'></script>
 </html>
