--- a/convert.html
+++ b/convert.html
@@ -16,6 +16,7 @@
         <li><a href="convert.html">Convert Chord Map</a></li>
         <li><a href="stats.html">Chord Stats</a></li>
         <li><a href="chordfinder.html">ChordFinder</a></li>
+        <li><a href="partial.html">Anagrams</a></li>
       </ul>
     </nav>
   </header>
@@ -56,7 +57,7 @@
     </label>
     <button id="convert">Convert</button>
   </form>
-  <script src="convert.js"></script>
+  <script src="js/convert.js"></script>
 </body>
 
 </html>
