--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="convert.html">Convert Chord Map</a></li>
                 <li><a href="stats.html">Chord Stats</a></li>
                 <li><a href="chordfinder.html">ChordFinder</a></li>
+                <li><a href="partialanagrams.html">Anagrams</a></li>
             </ul>
         </nav>
     </header>
@@ -50,6 +51,12 @@
             <a href="chordfinder.html">ChordFinder</a>
             <ul>
                 <li>This tool looks at your uploaded chord map and a text and finds common words and phrases in the text that you don't have chords for.</li>
+            </ul>
+        </li>
+        <li>
+            <a href="partialanagrams.html">Anagrams</a>
+            <ul>
+                <li>This tool looks at a text and identifies all of the partial anagrams. Partial anagrams (like tough and thought) are usually words that you need special attention to for choosing chord maps since they share the same overall letters.</li>
             </ul>
         </li>
     </ul>
