--- a/stats.html
+++ b/stats.html
@@ -4,7 +4,6 @@
 <head>
   <title>CharaChorder Chord Stats</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -17,6 +16,7 @@
         <li><a href="convert.html">Convert Chord Map</a></li>
         <li><a href="stats.html">Chord Stats</a></li>
         <li><a href="chordfinder.html">ChordFinder</a></li>
+        <li><a href="partialanagrams.html">Anagrams</a></li>
       </ul>
     </nav>
   </header>
@@ -35,7 +35,7 @@
   </form>
   </br>
   <div id="stats">Browse for your chord csv export and click calculate stats</div>
-  <script src="stats.js"></script>
+  <script src="js/stats.js"></script>
 </body>
 
 </html>
