--- a/convert.html
+++ b/convert.html
@@ -16,7 +16,7 @@
         <li><a href="convert.html">Convert Chord Map</a></li>
         <li><a href="stats.html">Chord Stats</a></li>
         <li><a href="chordfinder.html">ChordFinder</a></li>
-        <li><a href="partial.html">Anagrams</a></li>
+        <li><a href="partialanagrams.html">Anagrams</a></li>
       </ul>
     </nav>
   </header>
