Refactoring and adding counts to anagrams

--- a/convert.html
+++ b/convert.html
@@ -57,7 +57,7 @@
     </label>
     <button id="convert">Convert</button>
   </form>
-  <script src="js/convert.js"></script>
+  <script type='text/javascript' src="js/convert.js"></script>
 </body>
 
 </html>
