--- a/count.html
+++ b/count.html
@@ -39,5 +39,6 @@
     </form>
     <div id="bigram-counts-div"></div>
     <script type='text/javascript' src='js/count.js'></script>
+    <script type='text/javascript' src='js/downloadTable.js'></script>
 
 </html>
