--- a/stats.html
+++ b/stats.html
@@ -35,7 +35,8 @@
   </form>
   </br>
   <div id="stats">Browse for your chord csv export and click calculate stats</div>
-  <script src="js/stats.js"></script>
+  <script type='text/javascript' src="js/stats.js"></script>
+  <script type='text/javascript' src='js/downloadTable.js'></script>
 </body>
 
 </html>
