Add in a copy to clipboard for practice

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="stats.html">Chord Stats</a></li>
                 <li><a href="chordfinder.html">ChordFinder</a></li>
                 <li><a href="partialanagrams.html">Anagrams</a></li>
+                <li><a href="practice.html">Practice</a></li>
             </ul>
         </nav>
     </header>
@@ -57,6 +58,12 @@
             <a href="partialanagrams.html">Anagrams</a>
             <ul>
                 <li>This tool looks at a text and identifies all of the partial anagrams. Partial anagrams (like tough and thought) are usually words that you need special attention to for choosing chord maps since they share the same overall letters.</li>
+            </ul>
+        </li>
+        <li>
+            <a href="practice.html">Practice</a>
+            <ul>
+                <li>This tool will take your uploaded CSV chord file and copy a string into your clipboard for practicing in Monkeytype or <a href="https://charatyping.com/">CharaTyping</a></li>
             </ul>
         </li>
     </ul>
