--- a/practice.html
+++ b/practice.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>CharaChorder Chord Stats</title>
+  <title>CharaChorder Practice Chords</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"crossorigin="anonymous"></script>
@@ -24,23 +24,22 @@
       </ul>
     </nav>
   </header>
-  <h1>CharaChorder Chord Stats</h1>
+  <h1>CharaChorder Chord Pratice</h1>
   <p class="note">
   <ul>
     <li><b>Note:</b> everything is done client-side and your chord map never leaves your browser.</li>
   </ul>
   </li>
-  <form id="stats-form">
+  <form id="pratice-form">
     <label>
       Chord CSV file
       <input type="file" id="input-file" accept=".csv" />
     </label>
-    <button id="calculateStats" type="button">Calculate Stats</button>
+    <button id="copyForPractice" type="button">Copy to clipboard for practice</button>
   </form>
   </br>
-  <div id="stats">Browse for your chord csv export and click calculate stats</div>
-  <script type='text/javascript' src="js/stats.js"></script>
-  <script type='text/javascript' src='js/downloadTable.js'></script>
+  <div id="practice">Browse for your chord csv export and click "Copy to clipboard for practice". Paste into the "Custom" section of Monkeytype or CharaTyping and make sure to check the "Pipe Delimeter" checkbox.</div>
+  <script type='text/javascript' src="js/practice.js"></script>
 </body>
 
 </html>
