--- a/chordfinder.html
+++ b/chordfinder.html
@@ -31,6 +31,7 @@
         processing is all done in your client performance could be heavily influenced by your computer. Long text may
         take a while to lemmatize.
     </p>
+    <p>Frequency is the number of times the word showed up in the text. Score is the length of the text*frequency, representing the total number of characters in the text.</p>
     <form>
         <label>
             Chord CSV file
