--- a/chordfinder.html
+++ b/chordfinder.html
@@ -52,6 +52,7 @@
     </form>
     <div id="results"></div>
     <div id="phrases"></div>
+    <script type='text/javascript' src='js/count.js'></script>
     <script type='text/javascript' src='js/missing.js'></script>
     <script type='text/javascript' src='js/downloadTable.js'></script>
 </html>
