--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <head>
         <title>CharaChorder Utilities - Home</title>
-        <meta name="description" content="CharaChorder Utilities is a set of tools for CharaChorder users, including a bigram count tool, a chord map converter, chord statistics, and a chordfinder.">
+        <meta name="description" content="CharaChorder Utilities is a set of tools for that help users identify chords for their devices.">
         <meta property="og:title" content="CharaChorder Utilities - Home">
-        <meta property="og:description" content="CharaChorder Utilities is a set of tools for CharaChorder users, including a bigram count tool, a chord map converter, chord statistics, and a chordfinder.">
+        <meta property="og:description" content="CharaChorder Utilities is a set of tools for that help users identify chords for their devices.">
       </head>
       
     <meta charset="UTF-8">
