Add script and html

--- a/chordfinder.html
+++ b/chordfinder.html
@@ -19,6 +19,7 @@
                 <li><a href="chordfinder.html">ChordFinder</a></li>
                 <li><a href="partialanagrams.html">Anagrams</a></li>
                 <li><a href="practice.html">Practice</a></li>
+                <li><a href="chord-generator.html">CC1 Chord Generator</a></li>
             </ul>
         </nav>
     </header>
