--- a/stats.html
+++ b/stats.html
@@ -20,6 +20,7 @@
         <li><a href="chordfinder.html">ChordFinder</a></li>
         <li><a href="partialanagrams.html">Anagrams</a></li>
         <li><a href="practice.html">Practice</a></li>
+        <li><a href="chord-generator.html">CC1 Chord Generator</a></li>
       </ul>
     </nav>
   </header>
