--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                 <li>This tool will take your uploaded CSV chord file and copy a string into your clipboard for practicing in Monkeytype or <a href="https://charatyping.com/">CharaTyping</a></li>
             </ul>
         </li>
+        <li>
+            <a href="chord-generator.html">CC1 Chord Generator</a>
+            <ul>
+                <li>This tool will take an uploaded text file of words and attempt to generate a chord library file for them using a variety of rules.  Originally from https://github.com/bittujoju/charachorder</li>
+            </ul>
+        </li>
     </ul>
 </body>
 
