--- a/practice.html
+++ b/practice.html
@@ -5,8 +5,9 @@
   <title>CharaChorder Practice Chords</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
+  <script type='text/javascript' src="js/practice.js"></script>
 </head>
 
 <body>
@@ -29,17 +30,44 @@
   <ul>
     <li><b>Note:</b> everything is done client-side and your chord map never leaves your browser.</li>
   </ul>
-  </li>
-  <form id="pratice-form">
-    <label>
-      Chord CSV file
-      <input type="file" id="input-file" accept=".csv" />
-    </label>
-    <button id="copyForPractice" type="button">Copy to clipboard for practice</button>
+  </p>
+  <form id="practice-form">
+    <div>
+      <label for="chordFileInput" class="fileInputContainer">
+        Upload Chords
+      </label>
+      <input type="file" id="chordFileInput" style="display: none;" />
+      <div id="chordFileInputName" style="display: inline-block;"></div>
+      <div class="tooltip">
+        <i>ⓘ</i>
+        <span class="tooltiptext">
+          Browse for your chord csv export and click "Copy to clipboard for practice". Paste into the
+          "Custom" section of Monkeytype or CharaTyping and make sure to check the "Pipe Delimeter" checkbox.
+        </span>
+      </div>
+    </div>
+
+    <button type="button" id="startPracticeButton">Start Practice</button>
+
+    <div id="practice-window" style="display: none;">
+      <label id="question-word" style="text-align: center;"></label>
+      <label id="chord" style="display: none; text-align: center; color: #FF0000;"></label>
+      <div style="display: flex; align-items: center; justify-content: center;">
+        <input type="text" id="textInput" />
+        <div class="tooltip">
+          <i>ⓘ</i>
+          <span class="tooltiptext">
+            Type the chord here and press enter to submit. If you get it right, the next word will be displayed.
+          </span>
+        </div>
+      </div>
+      <label id="correct-words" style="text-align: center; margin-top: 5%; color:#4CAF50"></label>
+      <div id="line" style="display: none;"></div>
+      <label id="total-words" style="text-align: center; margin-top: 2%;"></label>
+    </div>
+
   </form>
   </br>
-  <div id="practice">Browse for your chord csv export and click "Copy to clipboard for practice". Paste into the "Custom" section of Monkeytype or CharaTyping and make sure to check the "Pipe Delimeter" checkbox.</div>
-  <script type='text/javascript' src="js/practice.js"></script>
 </body>
 
 </html>
