Add copy chords

--- a/practice.html
+++ b/practice.html
@@ -46,8 +46,8 @@
         </span>
       </div>
     </div>
-
-    <button type="button" id="startPracticeButton">Start Practice</button>
+    <button type="button" id="copy-chords">Copy chords</button>
+    <button type="button" id="start-practice-button">Start Practice</button>
 
     <div id="practice-window" style="display: none;">
       <label id="question-word" style="text-align: center;"></label>
