--- a/practice.html
+++ b/practice.html
@@ -43,9 +43,10 @@
       <div class="tooltip">
         <i>ⓘ</i>
         <span class="tooltiptext">
-          Browse for your chord csv export and either
+          Browse for your chord csv export and either<br>
           1. Click "Copy to clipboard for practice". Paste into the
-          "Custom" section of Monkeytype or CharaTyping and make sure to check the "Pipe Delimeter" checkbox.
+          "Custom" section of Monkeytype or CharaTyping and make sure to check the "Pipe Delimiter" checkbox.<br>
+          OR<br>
           2. Click "Start Practice" to practice in this window.
         </span>
       </div>
