Add space to submit

--- a/practice.html
+++ b/practice.html
@@ -73,7 +73,7 @@
         <div class="tooltip">
           <i>ⓘ</i>
           <span class="tooltiptext">
-            Type the chord here and press enter to submit. If you get it right, the next word will be displayed.
+            Type the chord here(with space or enter) to submit. If you get it right, the next word will be displayed.
           </span>
         </div>
       </div>
