Add results window

--- a/practice.html
+++ b/practice.html
@@ -83,6 +83,12 @@
       <label id="total-words" style="text-align: center; margin-top: 2%;"></label>
       <label id="wpm" style="text-align: center; display: none; margin-left: 1%;"></label>
     </div>
+    <div id="results-window">
+      <label id="result-wpm" style="text-align: center; margin-left: 1%;"></label>
+      <label id="result-accuracy" style="text-align: center; margin-left: 1%;"></label>
+    </div>
+
+    </div>
 
   </form>
   </br>
