Add Mistyped table

--- a/practice.html
+++ b/practice.html
@@ -85,6 +85,7 @@
     <div id="results-window">
       <label id="result-wpm" style="text-align: center; margin-left: 1%;"></label>
       <label id="result-accuracy" style="text-align: center; margin-left: 1%;"></label>
+      <div id="mistyped-words" ></div>
     </div>
 
     </div>
